<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:padding="16dp"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       style="@style/title"
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/how_to_use_it"
       />
   <TextView
       style="@style/details"
       android:id="@+id/how_to_use"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/how_to_use_explanation"
       />
   <TextView
       style="@style/labels"
       android:id="@+id/label_url"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/url_label"
       />

   <TextView
       style="@style/bigValue"
       android:id="@+id/url"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/no_connection"
       />
   <TextView
       style="@style/labels"
       android:id="@+id/label_number"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/sender_number"
       />
   <TextView
       style="@style/bigValue"
       android:id="@+id/number"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="+255 754 021 728"
       />
   <TextView
       style="@style/labels"
       android:id="@+id/label_content"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contents"
       />
   <TextView
       style="@style/bigValue"
       android:id="@+id/content"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textStyle="italic"
       android:text="@string/still_waiting"
       />
</LinearLayout>